[Glitch] Fix text overflow alignment for long author names in News
Port 7538bc77b787c861a062e2c4cc849e39b98a3a63 to glitch-soc

--- a/app/javascript/flavours/glitch/styles/components.scss
+++ b/app/javascript/flavours/glitch/styles/components.scss
@@ -9677,18 +9677,12 @@ noscript {
 
     &__shared {
       display: flex;
-      align-items: center;
+      align-items: baseline;
       color: $darker-text-color;
       gap: 8px;
       justify-content: space-between;
       font-size: 14px;
       line-height: 20px;
-
-      & > span {
-        display: flex;
-        align-items: center;
-        gap: 4px;
-      }
 
       &__pill {
         background: var(--surface-variant-background-color);
@@ -9699,6 +9693,7 @@ noscript {
         font-size: 12px;
         font-weight: 500;
         line-height: 16px;
+        flex-shrink: 0;
       }
 
       &__author-link {
